--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@unhead/vue": "^1.1.27",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.0",
     "json-server": "^0.17.3",
@@ -17,7 +18,9 @@
     "vee-validate": "^4.9.6",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-recaptcha": "^3.0.0-alpha.5",
     "vue-router": "^4.0.3",
+    "vue3-recaptcha2": "^1.7.0",
     "vuex": "^4.0.0",
     "yup": "^1.2.0"
   },
