--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-recaptcha": "^3.0.0-alpha.5",
+    "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.0.3",
     "vue3-recaptcha2": "^1.7.0",
     "vuex": "^4.0.0",
