--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.0",
     "json-server": "^0.17.3",
+    "jsonp": "^0.2.1",
     "mitt": "^3.0.0",
+    "recaptcha-v3": "^1.10.0",
     "register-service-worker": "^1.7.2",
     "vee-validate": "^4.9.6",
     "vue": "^3.2.13",
