--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "vee-validate": "^4.9.6",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-password-strength-meter": "^1.7.2",
     "vue-recaptcha": "^3.0.0-alpha.5",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.0.3",
+    "vue-simple-password-meter": "^1.3.4",
     "vue3-recaptcha2": "^1.7.0",
     "vuex": "^4.0.0",
     "yup": "^1.2.0"
