--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@unhead/vue": "^1.1.27",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.0",
+    "csv-stringify": "^6.4.0",
     "json-server": "^0.17.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonp": "^0.2.1",
     "mitt": "^3.0.0",
     "recaptcha-v3": "^1.10.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/jsonexport": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
